# PetroBuffer

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml
docs/: conf.py  index.rst
docs/source/: conf.py  examples.rst  index.rst  models.rst  modules.rst  petrobuffer.rst  requirements.txt
petrobuffer/: __init__.py  buffers.py  conversions.py  core.py  ferric.py
src/petrobuffer/: __init__.py  buffers.py  conversions.py  core.py  ferric.py
tests/: buffers_test.py  conversions_test.py  core_test.py  ferric_test.py
