[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "petrobuffer"
authors = [{name = "Philippa Liggins", email = "pkl28@cam.ac.uk"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License",
"Programming Language :: Python :: 3"]
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/pipliggins/PetroBuffer"
