[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "petrobuffer"
authors = [{name = "Philippa Liggins", email = "pkl28@cam.ac.uk"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3"]
dynamic = ["version", "description"
]
requires-python = ">=3.7"

dependencies = ["numpy>=1.15.3",]

[project.optional-dependencies]
test = ["pytest >= 7.1.2"]
doc = ["sphinx == 5.0.2"]

[project.urls]
Home = "https://github.com/pipliggins/PetroBuffer"
